--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.469.0",
     "next": "^15.1.2",
+    "openai": "^6.15.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
