docs: add stripe price ids to env example

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,14 @@ NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 OPENAI_API_KEY=
 NEXT_PUBLIC_GA_MEASUREMENT_ID=
+
+# Stripe (Live or Test IDs)
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_...
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_WEBHOOK_SECRET=whsec_...
+
+# Stripe Product IDs (MUST MATCH DASHBOARD)
+STRIPE_PRO_PRICE_ID=price_...
+STRIPE_BASIC_PRICE_ID=price_...
+STRIPE_ADDON_PRICE_ID=price_...
+STRIPE_THEMES_PRICE_ID=price_...
